--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
                         <p>
                             Selamat datang di portal undangan Seminar Proposal. Kami mengundang Anda untuk menghadiri
                             presentasi proposal penelitian yang akan dibawakan oleh Hamzah Nasrulloh. Seminar ini
-                            bertujuan untuk memaparkan dan mendiskusikan rencana pembuatan Marketplace Penyewaan Rumah
-                            Kos di Kabupaten Sumbawa Berbasis Website. Diharapkan kehadiran Teman Teman untuk memberikan
+                            bertujuan untuk memaparkan dan mendiskusikan rencana Pembuatan Marketplace Penyewaan Rumah Kos di Kabupaten Sumbawa Berbasis Website Menggunakan Metode Prototype. Diharapkan kehadiran Teman Teman untuk memberikan
                             dukungan dan masukan berharga pada acara ini.
                         </p>
                         <div class="header-buttons">
@@ -72,8 +71,7 @@
             <h2>Detail Acara</h2>
             <p><strong>Nama Mahasiswa:</strong> Hamzah Nasrulloh</p>
             <p><strong>NIM:</strong> 211001117</p>
-            <p><strong>Judul Proposal:</strong> Pembuatan Marketplace Penyewaan Rumah Kos di Kabupaten Sumbawa Berbasis
-                Website</p>
+            <p><strong>Judul Proposal:</strong> Pembuatan Marketplace Penyewaan Rumah Kos di Kabupaten Sumbawa Berbasis Website Menggunakan Metode Prototype/p>
             <p><strong>Program Studi:</strong> Informatika</p>
             <p><strong>Hari/Tanggal:</strong> Rabu, 6 November 2024</p>
             <p><strong>Waktu:</strong> 10:30 - 12:00 WITA</p>
