--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <h2>Detail Acara</h2>
             <p><strong>Nama Mahasiswa:</strong> Hamzah Nasrulloh</p>
             <p><strong>NIM:</strong> 211001117</p>
-            <p><strong>Judul Proposal:</strong> Pembuatan Marketplace Penyewaan Rumah Kos di Kabupaten Sumbawa Berbasis Website Menggunakan Metode Prototype/p>
+            <p><strong>Judul Proposal:</strong> Pembuatan Marketplace Penyewaan Rumah Kos di Kabupaten Sumbawa Berbasis Website Menggunakan Metode Prototype</p>
             <p><strong>Program Studi:</strong> Informatika</p>
             <p><strong>Hari/Tanggal:</strong> Rabu, 6 November 2024</p>
             <p><strong>Waktu:</strong> 10:30 - 12:00 WITA</p>
