--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="container">
             <nav class="navbar">
                 <div class="logo">
-                    <span>Undangan Seminar Proposal</span>
+                    <span>Undangan Sidang Skripsi</span>
                 </div>
                 <ul class="nav-links">
                     <li><a href="#home">Home</a></li>
@@ -32,13 +32,11 @@
             <!-- Header Section -->
             <div class="header-container">
                 <div class="header-content">
-                    <h1>Selamat Datang di Undangan Seminar Proposal</h1>
+                    <h1>Selamat Datang !.</h1>
                     <p>
-                        Selamat datang di portal undangan Seminar Proposal. Kami mengundang Anda untuk menghadiri
-                        presentasi proposal penelitian yang akan dibawakan oleh Hamzah Nasrulloh. Seminar ini
-                        bertujuan untuk memaparkan dan mendiskusikan rencana pembuatan Marketplace Penyewaan Rumah
-                        Kos di Kabupaten Sumbawa Berbasis Website. Diharapkan kehadiran Teman Teman untuk memberikan
-                        dukungan dan masukan berharga pada acara ini.
+                        Kami mengundang Anda untuk menghadiri pasca
+                        presentasi sidang skripsi yang akan dibawakan oleh Hamzah Nasrulloh.Kehadiran teman teman
+                        sangat berarti bagi saya. Mohon diluangkan waktunya untuk menghadiri acara ini. ^_^
                     </p>
                     <div class="header-buttons">
                         <a href="#details" class="btn btn-primary">Detail Acara</a>
@@ -67,10 +65,10 @@
             <h2>Detail Acara</h2>
             <p><strong>Nama Mahasiswa:</strong> Hamzah Nasrulloh</p>
             <p><strong>NIM:</strong> 211001117</p>
-            <p><strong>Judul Proposal:</strong> Pembuatan Marketplace Penyewaan Rumah Kos di Kabupaten Sumbawa Berbasis Website</p>
+            <p><strong>Judul Skripsi:</strong> Pembuatan Marketplace Penyewaan Rumah Kos di Kabupaten Sumbawa Berbasis Website</p>
             <p><strong>Program Studi:</strong> Informatika</p>
-            <p><strong>Hari/Tanggal:</strong> Rabu, 6 November 2024</p>
-            <p><strong>Waktu:</strong> 10:30 - 12:00 WITA</p>
+            <p><strong>Hari/Tanggal:</strong> Selasa, 21 Januari 2025</p>
+            <p><strong>Waktu:</strong> 14:30 - 16:00 WITA</p>
             <p><strong>Tempat:</strong> Ruang Seminar Fakultas Rekayasa Sistem, Universitas Teknologi Sumbawa</p>
         </div>
     </section>
